# MiniPP

cpp/src_app/: CMakeLists.txt
cpp/src_app/common/: backend_client.cpp  backend_client.hpp  challenge_client.cpp  challenge_client.hpp
cpp/src_app/device_manager/: device_status.hpp
cpp/src_app/server_audit_colloector/: _main.cpp  config.cpp  config.hpp  report_connection.cpp  report_connection.hpp
cpp/src_app/server_config_center/: __todo.txt  _main.cpp  config.cpp  config.hpp  device_challenge_manager.cpp  device_challenge_manager.hpp  device_relay_manager.cpp  device_relay_manager.hpp  disaptcher.cpp  (+5 more)
cpp/src_lib_common/: CMakeLists.txt
cpp/src_lib_component/: CMakeLists.txt
cpp/src_lib_protocol/: CMakeLists.txt
cpp/src_lib_protocol/pp_protocol/: client_auth.hpp  command.cpp  command.hpp  data_exchange.hpp  geo_info.hpp  usage_audit.cpp  usage_audit.hpp
cpp/src_lib_protocol/pp_protocol/app_status/: running_state.cpp  running_state.hpp
cpp/src_lib_protocol/pp_protocol/audit_terminal/: relay_server.cpp  terminal.hpp
cpp/src_lib_protocol/pp_protocol/common/: region.hpp
cpp/src_lib_protocol/pp_protocol/config_center/: backend_server.hpp  terminal.hpp
cpp/src_lib_protocol/pp_protocol/config_center_internal/: broadcast.hpp  register.hpp
cpp/src_lib_protocol/pp_protocol/device_relay/: init_ctrl_stream.hpp
cpp/src_lib_protocol/pp_protocol/proxy_relay/: connection.hpp
cpp/src_lib_protocol/pp_protocol/relay_terminal/: connection.hpp  init_data_stream.hpp  post_data.hpp  udp_channel.hpp
cpp/src_test/: CMakeLists.txt
run/: cc.sh  test_pa.sh
(+84 files in other folders)
